backend structure updated (DTOs and the files for the Task feature)